apps/ollama/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-mistral
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
